
U2F V1.1:
* Enable ISO ISO7816-4 by default.
* No longer support USB behavior. This was default and didn't make sense.