@@ -53,6 +53,7 @@
     <None Include="Makefile.win" />
     <None Include="README" />
     <None Include="SAMPLELOG" />
+    <None Include="VERSION" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{0F936F76-19DD-4263-9E6E-6F966AC1E0CF}</ProjectGuid>
@@ -118,7 +119,7 @@
     <NMakeBuildCommandLine>nmake -f Makefile.win _DEBUG=1</NMakeBuildCommandLine>
     <NMakeCleanCommandLine>nmake -f Makefile.win clean</NMakeCleanCommandLine>
     <NMakeOutput>$(ProjectDir)\BLECertificationTool.exe</NMakeOutput>
-    <NMakePreprocessorDefinitions>PLATFORM_WINDOWS; FEATURE_WINRT;_DEBUG</NMakePreprocessorDefinitions>
+    <NMakePreprocessorDefinitions>PLATFORM_WINDOWS; FEATURE_WINRT;_DEBUG;VERSION="&lt;version&gt;";</NMakePreprocessorDefinitions>
     <NMakeIncludeSearchPath>core/include/;BleApi;BLETest;ble_util</NMakeIncludeSearchPath>
     <AdditionalOptions>-ZW -Gm- -AI"C:/Program Files (x86)/Microsoft Visual Studio 14.0/VC/vcpackages" -AI"C:/Program Files (x86)/Windows Kits/10/References/"  -AI"C:/Program Files (x86)/Windows Kits/10/UnionMetaData/"</AdditionalOptions>
   </PropertyGroup>
@@ -126,7 +127,7 @@
     <NMakeBuildCommandLine>nmake -f Makefile.win</NMakeBuildCommandLine>
     <NMakeCleanCommandLine>nmake -f Makefile.win clean</NMakeCleanCommandLine>
     <NMakeOutput>$(ProjectDir)\BLECertificationTool.exe</NMakeOutput>
-    <NMakePreprocessorDefinitions>PLATFORM_WINDOWS; FEATURE_WINRT;</NMakePreprocessorDefinitions>
+    <NMakePreprocessorDefinitions>PLATFORM_WINDOWS; FEATURE_WINRT;;VERSION="&lt;version";</NMakePreprocessorDefinitions>
     <NMakeIncludeSearchPath>core/include/;BleApi;BLETest;ble_util</NMakeIncludeSearchPath>
     <AdditionalOptions>-ZW -Gm- -AI"C:/Program Files (x86)/Microsoft Visual Studio 14.0/VC/vcpackages" -AI"C:/Program Files (x86)/Windows Kits/10/References/"  -AI"C:/Program Files (x86)/Windows Kits/10/UnionMetaData/"</AdditionalOptions>
   </PropertyGroup>
