@@ -10,6 +10,8 @@ WINSDK_PATH=C:/Program Files (x86)/Windows Kits/10
 MSSDK=$(WINSDK_PATH)
 MSTOOLS=$(WINSDK_PATH)
 
+!INCLUDE VERSION
+
 all: $(EXENAME).exe
 
 !IFDEF _DEBUG
@@ -18,7 +20,7 @@ CFLAGS = -MDd -ZI
 CFLAGS = -MD
 !ENDIF
 
-CFLAGS = $(CFLAGS) -nologo -EHsc -W3 -Icore/include -IBleApi -Ible_util -DPLATFORM_WINDOWS -D__OS_WIN 
+CFLAGS = $(CFLAGS) -nologo -EHsc -W3 -Icore/include -IBleApi -Ible_util -DPLATFORM_WINDOWS -D__OS_WIN -DVERSION=\"$(VERSION)\"
 
 # Switching to default __stdcall calling convention. works around a bug in the Windows 8.0 Ble headers.
 #  I have been told this causes problems with Windows Platform SDK 10, so please try without on that platform.
