@@ -1,0 +1,1 @@
+VERSION=1.1.0-beta1
